# zephyr-template

./: .envrc.example  .gitignore  .tool-versions  CMakeLists.txt  README.md  prj.conf
.github/workflows/: build.yml
boards/: qemu_x86.conf
src/: main.c
